v1.0.0/modules/schema/pages/class/StartupModel.adoc
= `StartupModel`
:toclevels: 4


+++Unit start up characteristics depending on how long the unit has been off line.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:StartupModel`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`StartupModel`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
StartupModel {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



















ThermalGeneratingUnit {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



StartRampCurve {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



StartIgnFuelCurve {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



StartMainFuelCurve {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}












StartupModel -> ThermalGeneratingUnit: ThermalGeneratingUnit


StartupModel -> StartRampCurve: StartRampCurve


StartupModel -> StartIgnFuelCurve: StartIgnFuelCurve


StartupModel -> StartMainFuelCurve: StartMainFuelCurve


StartupModel -> DiagramObject: DiagramObjects


StartupModel -> InstanceSet: InstanceSet


StartupModel -> Name: Names


StartupModel -> ChangeSetMember: PropertiesCIMDataObject


StartupModel -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<ThermalGeneratingUnit,`ThermalGeneratingUnit`>>
| 1
| xref::class/ThermalGeneratingUnit.adoc[`ThermalGeneratingUnit`]
| +++A thermal generating unit may have a startup model.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<StartIgnFuelCurve,`StartIgnFuelCurve`>>
| 0..1
| xref::class/StartIgnFuelCurve.adoc[`StartIgnFuelCurve`]
| +++The unit's startup model may have a startup ignition fuel curve.+++

| <<StartMainFuelCurve,`StartMainFuelCurve`>>
| 0..1
| xref::class/StartMainFuelCurve.adoc[`StartMainFuelCurve`]
| +++The unit's startup model may have a startup main fuel curve.+++

| <<StartRampCurve,`StartRampCurve`>>
| 0..1
| xref::class/StartRampCurve.adoc[`StartRampCurve`]
| +++The unit's startup model may have a startup ramp curve.+++

| <<fixedMaintCost,`fixedMaintCost`>>
| 0..1
| xref::class/CostRate.adoc[`CostRate`]
| +++Fixed maintenance cost.+++

| <<hotStandbyHeat,`hotStandbyHeat`>>
| 0..1
| xref::class/HeatRate.adoc[`HeatRate`]
| +++The amount of heat input per time unit required for hot standby operation.+++

| <<incrementalMaintCost,`incrementalMaintCost`>>
| 0..1
| xref::class/CostPerEnergyUnit.adoc[`CostPerEnergyUnit`]
| +++Incremental maintenance cost.+++

| <<minimumDownTime,`minimumDownTime`>>
| 0..1
| xref::class/Hours.adoc[`Hours`]
| +++The minimum number of hours the unit must be down before restart.+++

| <<minimumRunTime,`minimumRunTime`>>
| 0..1
| xref::class/Hours.adoc[`Hours`]
| +++The minimum number of hours the unit must be operating before being allowed to shut down.+++

| <<riskFactorCost,`riskFactorCost`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++The opportunity cost associated with the return in monetary unit. This represents the restart's "share" of the unit depreciation and risk of an event which would damage the unit.+++

| <<startupCost,`startupCost`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++Total miscellaneous start up costs.+++

| <<startupDate,`startupDate`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The date and time of the most recent generating unit startup.+++

| <<startupPriority,`startupPriority`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Startup priority within control area where lower numbers indicate higher priorities.  More than one unit in an area may be assigned the same priority.+++

| <<stbyAuxP,`stbyAuxP`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++The unit's auxiliary active power consumption to maintain standby mode.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#fixedMaintCost]
=== `fixedMaintCost`
+++Fixed maintenance cost.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:StartupModel.fixedMaintCost`
| Cardinality
| 0..1
| Type
| xref::class/CostRate.adoc[`CostRate`]


|===

//[discrete]
[#hotStandbyHeat]
=== `hotStandbyHeat`
+++The amount of heat input per time unit required for hot standby operation.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:StartupModel.hotStandbyHeat`
| Cardinality
| 0..1
| Type
| xref::class/HeatRate.adoc[`HeatRate`]


|===

//[discrete]
[#incrementalMaintCost]
=== `incrementalMaintCost`
+++Incremental maintenance cost.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:StartupModel.incrementalMaintCost`
| Cardinality
| 0..1
| Type
| xref::class/CostPerEnergyUnit.adoc[`CostPerEnergyUnit`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#minimumDownTime]
=== `minimumDownTime`
+++The minimum number of hours the unit must be down before restart.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:StartupModel.minimumDownTime`
| Cardinality
| 0..1
| Type
| xref::class/Hours.adoc[`Hours`]


|===

//[discrete]
[#minimumRunTime]
=== `minimumRunTime`
+++The minimum number of hours the unit must be operating before being allowed to shut down.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:StartupModel.minimumRunTime`
| Cardinality
| 0..1
| Type
| xref::class/Hours.adoc[`Hours`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#riskFactorCost]
=== `riskFactorCost`
+++The opportunity cost associated with the return in monetary unit. This represents the restart's "share" of the unit depreciation and risk of an event which would damage the unit.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:StartupModel.riskFactorCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

//[discrete]
[#StartIgnFuelCurve]
=== `StartIgnFuelCurve`
+++The unit's startup model may have a startup ignition fuel curve.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:StartupModel.StartIgnFuelCurve`
| Cardinality
| 0..1
| Type
| xref::class/StartIgnFuelCurve.adoc[`StartIgnFuelCurve`]


|===

//[discrete]
[#StartMainFuelCurve]
=== `StartMainFuelCurve`
+++The unit's startup model may have a startup main fuel curve.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:StartupModel.StartMainFuelCurve`
| Cardinality
| 0..1
| Type
| xref::class/StartMainFuelCurve.adoc[`StartMainFuelCurve`]


|===

//[discrete]
[#StartRampCurve]
=== `StartRampCurve`
+++The unit's startup model may have a startup ramp curve.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:StartupModel.StartRampCurve`
| Cardinality
| 0..1
| Type
| xref::class/StartRampCurve.adoc[`StartRampCurve`]


|===

//[discrete]
[#startupCost]
=== `startupCost`
+++Total miscellaneous start up costs.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:StartupModel.startupCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

//[discrete]
[#startupDate]
=== `startupDate`
+++The date and time of the most recent generating unit startup.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:StartupModel.startupDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#startupPriority]
=== `startupPriority`
+++Startup priority within control area where lower numbers indicate higher priorities.  More than one unit in an area may be assigned the same priority.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:StartupModel.startupPriority`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#stbyAuxP]
=== `stbyAuxP`
+++The unit's auxiliary active power consumption to maintain standby mode.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:StartupModel.stbyAuxP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ThermalGeneratingUnit]
=== `ThermalGeneratingUnit`
+++A thermal generating unit may have a startup model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:StartupModel.ThermalGeneratingUnit`
| Cardinality
| 1
| Type
| xref::class/ThermalGeneratingUnit.adoc[`ThermalGeneratingUnit`]


|===


